miniextendr-macros/tests/ui/several_ok_without_choices.rs
//! Test: several_ok without choices() should error

use miniextendr_macros::miniextendr;

#[miniextendr]
fn bad_several_ok(#[miniextendr(several_ok)] x: Vec<String>) {}

fn main() {}
